--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon -e js,graphql src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "babel src -d dist"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.14.7",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
@@ -20,6 +22,8 @@
     "ms": "^2.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "nodemon": "^2.0.9"
   }
 }
